--- a/comunicados-trimestrais/2022-3.md
+++ b/comunicados-trimestrais/2022-3.md
@@ -12,65 +12,65 @@ Nossa carteira atual:
   <tr>
     <th>Empresa</th>
     <th>Ação</th>
-    <th>Quantidade de Ações</th>
-    <th>Cotação atual por ação</th>
-    <th>Cotação total</th>
+    <th align="right">Quantidade de Ações</th>
+    <th align="right">Cotação atual por ação</th>
+    <th align="right">Cotação total</th>
   </tr>
   <tr>
     <td>C&A</td>
     <td>CEAB3</td>
-    <td>19.300</td>
-    <td>R$3,28</td>
-    <td>R$63.304</td>
+    <td align="right">19.300</td>
+    <td align="right">R$3,28</td>
+    <td align="right">R$63.304</td>
   </tr>
   <tr>
     <td>Grupo Grazziotin</td>
     <td>CGRA3</td>
-    <td>2.000</td>
-    <td>R$35,05</td>
-    <td>R$70.100</td>
+    <td align="right">2.000</td>
+    <td align="right">R$35,05</td>
+    <td align="right">R$70.100</td>
   </tr>
   <tr>
     <td>Cogna Educação</td>
     <td>COGN3</td>
-    <td>20.500</td>
-    <td>R$2,94</td>
-    <td>R$60.270</td>
+    <td align="right">20.500</td>
+    <td align="right">R$2,94</td>
+    <td align="right">R$60.270</td>
   </tr>
   <tr>
     <td>Cyrela</td>
     <td>CYRE3</td>
-    <td>8.100</td>
-    <td>R$18,35</td>
-    <td>R$148.635</td>
+    <td align="right">8.100</td>
+    <td align="right">R$18,35</td>
+    <td align="right">R$148.635</td>
   </tr>
   <tr>
     <td>Metalúrgica Gerdau</td>
     <td>GOAU4</td>
-    <td>12.300</td>
-    <td>R$10,59</td>
-    <td>R$130.257</td>
+    <td align="right">12.300</td>
+    <td align="right">R$10,59</td>
+    <td align="right">R$130.257</td>
   </tr>
   <tr>
     <td>Mahle Metal Leve</td>
     <td>LEVE3</td>
-    <td>3.800</td>
-    <td>R$23,26</td>
-    <td>R$88.388</td>
+    <td align="right">3.800</td>
+    <td align="right">R$23,26</td>
+    <td align="right">R$88.388</td>
   </tr>
   <tr>
     <td>Multilaser</td>
     <td>MLAS3</td>
-    <td>6.400</td>
-    <td>R$5,24</td>
-    <td>R$33.536</td>
+    <td align="right">6.400</td>
+    <td align="right">R$5,24</td>
+    <td align="right">R$33.536</td>
   </tr>
   <tr>
     <td>Total</td>
     <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>R$594.490</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">&nbsp;</td>
+    <td align="right">R$594.490</td>
   </tr>
 </table>
 
