Left-align header items

--- a/comunicados-trimestrais/2022-3.md
+++ b/comunicados-trimestrais/2022-3.md
@@ -10,8 +10,8 @@ Nossa carteira atual:
 
 <table>
   <tr>
-    <th>Empresa</th>
-    <th>Ação</th>
+    <th align="left">Empresa</th>
+    <th align="left">Ação</th>
     <th align="right">Quantidade de Ações</th>
     <th align="right">Cotação atual por ação</th>
     <th align="right">Cotação total</th>
