Styling and typo fix

--- a/comunicados-trimestrais/2022-3.md
+++ b/comunicados-trimestrais/2022-3.md
@@ -2,13 +2,13 @@ Caras parceiras e parceiros,
 
 nossa cota encerrou o trimestre a R$1,1339151.
 
-O fundo teve uma performance de 13,39% desde sua incepção como Clube de Investimentos, já descontadas as taxas.
+O fundo teve uma performance de **13,39%** desde sua incepção como Clube de Investimentos, já descontadas as taxas.
 
-No mesmo período, o Ibovespa teve performance de -0,59%.
+No mesmo período, o Ibovespa teve performance de **-0,59%**.
 
 Nossa carteira atual:
 
-<table>
+<table cellspacing="0" cellpadding="10">
   <tr>
     <th align="left">Empresa</th>
     <th align="left">Ação</th>
@@ -78,7 +78,7 @@ Encerramos o trimestre com R$9.887,94 em caixa.
 
 Em menos de 2 trimestres funcionando como Clube, já tivemos um gostinho de como nossos resultados vão oscilar. É consequência de uma carteira concentrada. O objetivo é que no longo prazo nosso resultado seja superior. Em outras palavras: preferimos um retorno de 15% que passeou para cima e para baixo do que um retorno de 10% que andou em linha reta.
 
-Na prática: desde 2017 o retorno da nossa parceria teria sido de 136,13% se tivéssemos a mesma base de custos do Clube. O retorno de fato foi acima de 158% poisantes do Clube os custos fixos eram menores, porém não era possível mantê-los conforme a carteira multiplicava de tamanho. O retorno do Ibovespa foi de 84,66%.
+Na prática: desde 2017 o retorno da nossa parceria teria sido de **136,13%** se tivéssemos a mesma base de custos do Clube. O retorno de fato foi acima de 158% pois antes do Clube os custos fixos eram menores, porém não era possível mantê-los conforme a carteira multiplicava de tamanho. O retorno do Ibovespa foi de **84,66%**.
 
 Continuo enxergando oportunidades muito mais do que suficientes para alocar nossos recursos. Na carta de fim de ano escreverei um pouco mais sobre isso.
 
