--- a/comunicados-trimestrais/2024-2.md
+++ b/comunicados-trimestrais/2024-2.md
@@ -5,9 +5,9 @@
 
 <p>nossa cota encerrou o semestre a R$1,437607900.</p>
 
-<p>O fundo teve uma performance de **-9,76%** no primeiro semestre do ano, já descontadas as taxas.</p>
+<p>O fundo teve uma performance de <b>-9,76%</b> no primeiro semestre do ano, já descontadas as taxas.</p>
 
-<p>No mesmo período, o Ibovespa teve performance de **-7,66%**.</p>
+<p>No mesmo período, o Ibovespa teve performance de <b>7,66%</b>.</p>
 
 <p>Nossa carteira atual:</p>
 
@@ -107,7 +107,7 @@
 
 <p>Encerramos o semestre com R$2.049.211,63 de patrimônio total.</p>
 
-<p>Do início de 2017 até hoje nossa parceria teve retorno de **225,01%**, versus **105,76%** do Ibovespa.</p>
+<p>Do início de 2017 até hoje nossa parceria teve retorno de <b>225,01%</b>, versus <b>105,76%</b> do Ibovespa.</p>
 
 <p>Obrigado pela parceria e confiança, abraços,</p>
 
