--- a/comunicados-trimestrais/2025-2.md
+++ b/comunicados-trimestrais/2025-2.md
@@ -5,9 +5,13 @@
 
 <p>nossa cota encerrou o semestre a R$1,474778400.</p>
 
+<p>Do início de 2017 até o fim do semestre, nossa parceria teve retorno de <b>233,42%</b>, versus <b>130,58%</b> do Ibovespa.</p>
+
 <p>O fundo teve uma performance de <b>8,44%</b> no primeiro semestre do ano, já descontadas as taxas.</p>
 
 <p>No mesmo período, o Ibovespa teve performance de <b>15,44%</b>.</p>
+
+<p>Encerramos o semestre com R$1.735.222,37 de patrimônio total.</p>
 
 <p>Nossa carteira atual:</p>
 
@@ -90,10 +94,6 @@
     <td align="right">R$1.680.563</td>
   </tr>
 </table>
-
-<p>Encerramos o semestre com R$1.735.222,37 de patrimônio total.</p>
-
-<p>Do início de 2017 até hoje nossa parceria teve retorno de <b>233,42%</b>, versus <b>130,58%</b> do Ibovespa.</p>
 
 <p>Obrigado pela parceria e confiança, abraços,</p>
 
