--- a/comunicados-trimestrais/2025-2.md
+++ b/comunicados-trimestrais/2025-2.md
@@ -25,7 +25,7 @@
   </tr>
   <tr>
     <td>Allied Tecnologia</td>
-    <td>CEAB3</td>
+    <td>ALLD3</td>
     <td align="right">42.500</td>
     <td align="right">R$7,02</td>
     <td align="right">R$298.350</td>
