--- a/comunicados-trimestrais/2025-4.md
+++ b/comunicados-trimestrais/2025-4.md
@@ -1,10 +1,82 @@
 <p>Caras parceiras e parceiros,</p>
 
-<p>o retorno da nossa parceria em 2025 foi de <b>xxxx</b>, já descontadas todas as despesas. A cota encerrou o ano a <b>R$xxx</b>.</p>
+<p>
+  o retorno da nossa parceria em 2025 foi de <b>54,30%</b>, já descontadas todas as despesas. A cota
+  encerrou o ano a <b>R$2,0983867</b>.
+</p>
 
-<p>Nossa parceria superou o índice Bovespa em <b>xxx</b> pontos percentuais, que rendeu <b>xxx</b> no ano.</p>
+<p>
+  Nossa parceria superou o índice Bovespa em <b>20,35</b> pontos percentuais. O Ibovespa rendeu <b>34,95%</b> no
+  ano.
+</p>
 
-<p>Do início de 2017 até o fim do ano, nossa parceria teve retorno de <b>xxx</b>, versus <b>xxx</b> do Ibovespa.</p>
+<p>
+  Do início de 2017 até o fim do ano, nossa parceria teve retorno de <b>374,43%</b>, versus <b>167,55%</b>
+  do Ibovespa.
+</p>
+
+<table>
+  <tr>
+    <th>Ano</th>
+    <th>Nossa Parceria</th>
+    <th>Ibovespa</th>
+  </tr>
+  <tr>
+    <td>2017</td>
+    <td>29,44%</td>
+    <td>26,86%</td>
+  </tr>
+  <tr>
+    <td>2018</td>
+    <td>11,51%</td>
+    <td>15,03%</td>
+  </tr>
+  <tr>
+    <td>2019</td>
+    <td>59,25%</td>
+    <td>31,58%</td>
+  </tr>
+  <tr>
+    <td>2020</td>
+    <td>–9,23%</td>
+    <td>2,92%</td>
+  </tr>
+  <tr>
+    <td>2021</td>
+    <td>5,21%</td>
+    <td>–11,92%</td>
+  </tr>
+  <tr>
+    <td>2022</td>
+    <td>8,95%</td>
+    <td>4,69%</td>
+  </tr>
+  <tr>
+    <td>2023</td>
+    <td>50,59%</td>
+    <td>22,28%</td>
+  </tr>
+  <tr>
+    <td>2024</td>
+    <td>–14,63%</td>
+    <td>–10,36%</td>
+  </tr>
+  <tr>
+    <td>2025</td>
+    <td>54,30%</td>
+    <td>33,95%</td>
+  </tr>
+  <tr>
+    <td>Acumulado</td>
+    <td>374,43%</td>
+    <td>167,55%</td>
+  </tr>
+  <tr>
+    <td>Retorno Anualizado</td>
+    <td>18,89%</td>
+    <td>11,56%</td>
+  </tr>
+</table>
 
 <p>Nossa carteira atual:</p>
 
@@ -19,90 +91,139 @@
   <tr>
     <td>Allied Tecnologia</td>
     <td>ALLD3</td>
-    <td align="right">42.500</td>
-    <td align="right">R$8,83</td>
-    <td align="right">R$375.275</td>
+    <td align="right">52.600</td>
+    <td align="right">R$8,16</td>
+    <td align="right">R$429.216,00</td>
   </tr>
   <tr>
     <td>Bradespar</td>
     <td>BRAP4</td>
     <td align="right">14.000</td>
-    <td align="right">R$16,93</td>
-    <td align="right">R$237.020</td>
+    <td align="right">R$19,90</td>
+    <td align="right">R$278.600,00</td>
   </tr>
   <tr>
     <td>Companhia Elétrica Brasiliense</td>
     <td>CEBR3</td>
     <td align="right">2.800</td>
-    <td align="right">R$23,04</td>
-    <td align="right">R$64.512</td>
+    <td align="right">R$26,79</td>
+    <td align="right">R$75.012,00</td>
   </tr>
   <tr>
     <td>Grupo Grazziotin</td>
     <td>CGRA3</td>
-    <td align="right">6.000</td>
-    <td align="right">R$30,00</td>
-    <td align="right">R$180.000</td>
+    <td align="right">6.982</td>
+    <td align="right">R$28,33</td>
+    <td align="right">R$197.800,06</td>
   </tr>
   <tr>
     <td>Grupo Grazziotin</td>
     <td>CGRA4</td>
-    <td align="right">3.500</td>
-    <td align="right">R$29,70</td>
-    <td align="right">R$103.950</td>
+    <td align="right">4.073</td>
+    <td align="right">R$26,39</td>
+    <td align="right">R$107.486,47</td>
   </tr>
   <tr>
     <td>Cogna Educação</td>
     <td>COGN3</td>
-    <td align="right">66.000</td>
-    <td align="right">R$3,34</td>
-    <td align="right">R$220.440</td>
+    <td align="right">72.600</td>
+    <td align="right">R$3,16</td>
+    <td align="right">R$229.416,00</td>
   </tr>
   <tr>
     <td>Metalúrgica Gerdau</td>
     <td>GOAU4</td>
-    <td align="right">43.000</td>
-    <td align="right">R$9,52</td>
-    <td align="right">R$409.360</td>
+    <td align="right">55.331</td>
+    <td align="right">R$9,00</td>
+    <td align="right">R$497.979,00</td>
   </tr>
   <tr>
     <td>Petrobrás</td>
     <td>PETR4</td>
-    <td align="right">2.800</td>
-    <td align="right">R$31,46</td>
-    <td align="right">R$88.088</td>
+    <td align="right">6.900</td>
+    <td align="right">R$30,82</td>
+    <td align="right">R$212.658,00</td>
   </tr>
   <tr>
     <td>Vale</td>
     <td>VALE3</td>
     <td align="right">3.900</td>
-    <td align="right">R$57,58</td>
-    <td align="right">R$224.562</td>
+    <td align="right">R$71,96</td>
+    <td align="right">R$280.644,00</td>
   </tr>
   <tr>
     <td>Total</td>
     <td>&nbsp;</td>
-    <td align="right">184.500</td>
+    <td align="right">219.186</td>
     <td align="right">&nbsp;</td>
-    <td align="right">R$1.903.207</td>
+    <td align="right">R$2.308.811,53</td>
   </tr>
 </table>
 
-<p>Encerramos o ano com R$xxxxx de patrimônio total.</p>
+<p>Encerramos o ano com R$2.564.678,57 de patrimônio total.</p>
 
-<p>Neste ano de 2025 conseguimos não ter nem mesmo uma ideia nova de investimento. A introdução da Bradespar não representa novidade, porque ela é um veículo de investimento na Vale. E a Petrobras voltou à nossa carteira depois de poucos meses.</p>
+<p>
+  Neste ano de 2025 conseguimos não ter nem mesmo uma ideia nova de investimento. A introdução da
+  Bradespar não representa novidade, porque ela é um veículo de investimento na Vale. E a Petrobras
+  voltou à nossa carteira depois de poucos meses.
+</p>
 
-<p>Os princípios que seguimos se mantêm: sermos parceiros de poucas e boas empresas, com pouca ou nenhuma dívida e com bons motivos para acreditarmos que continuarão boas daqui a 20 ou 30 anos. Pensar com um horizonte de 10 anos ou mais. Aceitar que nossas cotações variem muito mais do que os índices. Usar largas margens de segurança.</p>
+<p>
+  Os princípios que seguimos se mantêm: sermos parceiros de poucas e boas empresas, com pouca ou
+  nenhuma dívida e com bons motivos para acreditarmos que continuarão boas daqui a 20 ou 30 anos.
+  Pensar com um horizonte de 10 anos ou mais. Aceitar que nossas cotações variem muito mais do que
+  os índices. Usar largas margens de segurança.
+</p>
 
-<p>Os resultados de muitas empresas receberam um empurrãozinho este final de ano: a partir do ano que vem os dividendos serão tributados em 10% (não havia tributação até 2025), e tributos sobre juros sobre capital próprio passarão de 15% para 17,5%. Com isso, várias empresas, nossas inclusive, anteciparam dividendos e bonificações. Um raciocínio simplista levaria a crer que, a partir de agora, as empresas vão dar uma ênfase um pouco maior a reinvestir seus lucros visando crescer, e um pouco menor a distribuir dividendos. Veremos.</p>
+<p>
+  Os resultados de muitas empresas receberam um empurrãozinho este final de ano: a partir do ano que
+  vem os dividendos serão tributados em 10% (não havia tributação até 2025), e tributos sobre juros
+  sobre capital próprio passarão de 15% para 17,5%. Com isso, várias empresas, nossas inclusive,
+  anteciparam dividendos e bonificações. Um raciocínio simplista levaria a crer que, a partir de
+  agora, as empresas vão dar ênfase maior a reinvestir seus lucros visando crescer, e
+  menor a distribuir dividendos. Veremos.
+</p>
 
-<p>O fato de nossas empresas terem subido significativamente de cotação enquanto distribuíram bons dividendos nos faz querer olhar para cada uma delas e pensar se, hoje, nos tornaríamos sócios novamente. Obviamente a resposta até agora foi “sim”. É claro também que fizemos isso várias vezes ao longo do ano. O que observamos é que, mesmo nos preços de hoje, as empresas que temos parecem valer significativamente mais (ainda custam 3, 4, 5, 7 vezes seus resultados anuais). Elas mantém um endividamento variando entre o moderado e o nulo. Das empresas que não fazem parte da nossa carteira, vejo também uma meia-dúzia com qualidade e boa relação valor/preço, apenas não o suficiente para diversificar ou substituir — e um ou outro caso em que, creia se puder, elas são pequenas demais para nosso Clube, ao menos em volume de transações na bolsa de valores.</p>
+<p>
+  O fato de nossas empresas terem subido significativamente de cotação enquanto distribuíram bons
+  dividendos nos faz querer olhar para cada uma delas e pensar se, hoje, nos tornaríamos sócios delas
+  novamente. Obviamente a resposta até agora foi “sim”. O que observamos é que, mesmo nos preços de hoje,
+  as empresas que temos parecem valer significativamente mais (ainda custam 3, 4, 5, 7 vezes seus resultados anuais). Elas mantém
+  um endividamento variando entre o moderado e o nulo. Das empresas que não fazem parte da nossa
+  carteira, vejo também uma meia-dúzia com qualidade e boa relação valor/preço, apenas não o
+  suficiente para diversificar ou substituir — e um ou outro caso em que, creia se puder, elas são
+  pequenas demais para nosso Clube, ao menos em volume de transações na bolsa de valores.
+</p>
 
-<p>Num ano com resultado acima da média, é tentadora a ilusão de que nossos passos em falso foram poucos. Só que os equívocos podem ser multianuais. Veja por exemplo uma verdadeira comédia de erros chamada Cogna, protagonizada por mim: entre 2022 e 2024 tivemos uma boa fatia do nosso patrimônio com ela, comprada a mais ou menos R$2 por ação. No finalzinho do ano passado eu joguei a toalha e vendi a maior parte da nossa posição a R$1 por ação. Restou na nossa carteira uma pequena parte do que tínhamos, e que prontamente começou a subir de cotação. Por sorte, já que intenção era zerar essas ações, deixei o que estava ali, e elas mais que triplicaram de preço, inclusive ajudando bastante nosso resultado este ano. A lição é que era possível ter tido mais paciência tanto para comprar quanto para começar a vender. Dos acertos eu procuro aprender também.</p>
+<p>
+  Num ano com resultado acima da média, pode nascer a ilusão de que nossos passos em falso foram
+  poucos. Só que os equívocos podem ser multianuais. Veja por exemplo uma verdadeira comédia de
+  erros chamada Cogna, protagonizada por mim: entre 2022 e 2024 tivemos uma boa fatia do nosso
+  patrimônio com ela, comprada a mais ou menos R$2 por ação. No finalzinho do ano passado eu joguei
+  a toalha e vendi a maior parte da nossa posição a R$1 por ação. Restou em nossa carteira uma
+  pequena parte do que tínhamos, que eu pretendia vender também. Prontamente ela começou a subir de
+  cotação mais que triplicou de preço, inclusive ajudando bastante nosso resultado este ano.
+  A lição é que era possível ter tido mais paciência tanto para comprar quanto para começar a vender.
+</p>
 
-<p>A total falta de prognósticos oferecida na carta passada, supersticiosamente, será mantida desta vez. Manterei, é claro, o trabalho de busca por novas ideias de investimento. Mantenho também todas as poupanças da minha família, exceto 3 meses de despesas de vida, investidas na nossa parceria.</p>
+<p>
+  A total falta de prognósticos oferecida na carta passada, por superstição e racionalidade, será mantida desta
+  vez. Manterei, é claro, o trabalho de busca por novas ideias de investimento. Mantenho também
+  todas as poupanças da minha família, exceto 3 meses de despesas de vida, investidas na nossa
+  parceria.
+</p>
 
-<p>Gostaria de compartilhar com os novos cotistas e relembrar os mais antigos do “plano” que temos: incrementar o nosso patrimônio, tanto pelos nosso retornos quanto por novos aportes, para nos convertermos em um Fundo de fato. O Fundo tende a proporcionar que eu me profissionalize na gestão, podendo dedicar tempo integral à gestão — é de se imaginar que trazendo resultados ainda melhores. Há também outras vantagens, como maior flexibilidade de manter nosso capital fora de ações, ou fora de empresas brasileiras, se o período de turbulência. Acredito que quando esse momento chegar, na soma todos sairemos ganhando. Hoje temos 2,5 milhões. Precisamos de algo a partir de 20 milhões em valores atuais para viabilizar um Fundo. Ficarei muito grato a todas a todos que participarem disso, e darei o meu melhor para retribuir com bons resultados.</p>
+<p>
+  Gostaria de compartilhar com os novos cotistas e relembrar os mais antigos do “plano” que temos:
+  incrementar o nosso patrimônio, tanto pelos nosso retornos quanto por novos aportes, para nos
+  convertermos em um Fundo de fato. O Fundo tende a proporcionar que eu me profissionalize na
+  gestão, podendo dedicar tempo integral à gestão — é de se imaginar que trazendo resultados ainda
+  melhores. Há também outras vantagens, como maior flexibilidade de manter nosso capital fora de
+  ações, ou fora de empresas brasileiras, se o período de turbulência. Acredito que quando esse
+  momento chegar, na soma todos sairemos ganhando. Hoje temos 2,5 milhões. Precisamos de algo a
+  partir de 20 milhões em valores atuais para viabilizar um Fundo. Ficarei muito grato a todas a
+  todos que participarem disso, e darei o meu melhor para retribuir com bons resultados.
+</p>
 
 <p>Desejo a você e aos seus um ótimo 2026!</p>
 <p>Gustavo Saiani</p>
