--- a/comunicados-trimestrais/2025-4.md
+++ b/comunicados-trimestrais/2025-4.md
@@ -1,17 +1,17 @@
 <p>Caras parceiras e parceiros,</p>
 
 <p>
-  o retorno da nossa parceria em 2025 foi de <b>54,30%</b>, já descontadas todas as despesas. A cota
-  encerrou o ano a <b>R$2,0983867</b>.
+  o retorno da nossa parceria em 2025 foi de <b>54,27%</b>, já descontadas todas as despesas. A cota
+  encerrou o ano a <b>R$2,098022</b>.
 </p>
 
 <p>
-  Nossa parceria superou o índice Bovespa em <b>20,35</b> pontos percentuais. O Ibovespa rendeu <b>34,95%</b> no
+  Nossa parceria superou o Índice Bovespa em <b>20,32</b> pontos percentuais. O Ibovespa rendeu <b>33,95%</b> no
   ano.
 </p>
 
 <p>
-  Do início de 2017 até o fim do ano, nossa parceria teve retorno de <b>374,43%</b>, versus <b>167,55%</b>
+  Do início de 2017 até o fim de 2025, nossa parceria teve retorno de <b>374,34%</b>, versus <b>167,55%</b>
   do Ibovespa.
 </p>
 
@@ -63,17 +63,17 @@
   </tr>
   <tr>
     <td>2025</td>
-    <td>54,30%</td>
+    <td>54,27%</td>
     <td>33,95%</td>
   </tr>
   <tr>
     <td>Acumulado</td>
-    <td>374,43%</td>
+    <td>374,34%</td>
     <td>167,55%</td>
   </tr>
   <tr>
     <td>Retorno Anualizado</td>
-    <td>18,89%</td>
+    <td>18,88%</td>
     <td>11,56%</td>
   </tr>
 </table>
@@ -138,7 +138,7 @@
     <td align="right">R$497.979,00</td>
   </tr>
   <tr>
-    <td>Petrobrás</td>
+    <td>Petrobras</td>
     <td>PETR4</td>
     <td align="right">6.900</td>
     <td align="right">R$30,82</td>
@@ -160,12 +160,49 @@
   </tr>
 </table>
 
-<p>Encerramos o ano com R$2.630.749,83 de patrimônio total.</p>
+<p>Encerramos o ano com R$2.530.645,44 de patrimônio total.</p>
 
 <p>
   Neste ano de 2025 conseguimos não ter nem mesmo uma ideia nova de investimento. A introdução da
   Bradespar não representa novidade, porque ela é um veículo de investimento na Vale. E a Petrobras
   voltou à nossa carteira depois de poucos meses.
+</p>
+
+<p>
+  Os resultados de muitas empresas receberam um empurrãozinho este final de ano: a partir do ano que
+  vem os dividendos serão tributados em 10% (não havia tributação até 2025), e tributos aos juros
+  sobre capital próprio passarão de 15% para 17,5%. Com isso, várias empresas, nossas inclusive,
+  anteciparam dividendos e bonificações. Um raciocínio simplista levaria a crer que, a partir de
+  agora, as empresas vão dar mais ênfase ao reinvestimento de seus lucros, e
+  menos à distribuição de dividendos. Veremos.
+</p>
+
+<p>
+  O fato de nossas empresas terem subido significativamente de cotação enquanto distribuíam bons
+  dividendos nos faz olhar para cada uma e pensar se nos tornaríamos sócios delas
+  aos preços atuais. Obviamente a resposta até agora foi “sim”.
+  As empresas que temos ainda custam 3, 4, 5, 7 vezes seus resultados anuais. Elas mantêm
+  um endividamento variando entre o moderado e o nulo. Das empresas que não fazem parte da nossa
+  carteira, vejo também uma meia-dúzia com qualidade e boa relação valor/preço, apenas não o
+  suficiente para diversificar ou substituir — e um ou outro caso em que, creia se puder, elas são
+  pequenas demais para nosso Clube, ao menos em volume de transações na bolsa de valores.
+</p>
+
+<p>
+  Num ano com resultado acima da média, pode nascer a ilusão de que nossos passos em falso foram
+  poucos. Só que os equívocos podem ser multianuais. Veja, por exemplo uma verdadeira comédia de
+  erros chamada Cogna, protagonizada por mim: entre 2022 e 2024 tivemos uma boa fatia do nosso
+  patrimônio com ela, comprada a mais ou menos R$2 por ação. No finalzinho do ano passado eu joguei
+  a toalha e vendi a maior parte do que tínhamos a R$1 por ação. O que restou eu pretendia vender também.
+  Prontamente ela começou a subir de cotação até mais do que triplicar, inclusive ajudando bastante o nosso resultado.
+  Uma lição é que era possível ter tido mais paciência tanto para comprar quanto para começar a vender.
+</p>
+
+<p>
+  A total falta de prognósticos oferecidos na carta passada, por superstição e racionalidade, será mantida desta
+  vez. Manterei, é claro, o trabalho de busca por novas ideias de investimento. Mantenho também
+  todas as poupanças da minha família, exceto 3 meses de despesas, investidas na nossa
+  parceria.
 </p>
 
 <p>
@@ -176,54 +213,33 @@
 </p>
 
 <p>
-  Os resultados de muitas empresas receberam um empurrãozinho este final de ano: a partir do ano que
-  vem os dividendos serão tributados em 10% (não havia tributação até 2025), e tributos sobre juros
-  sobre capital próprio passarão de 15% para 17,5%. Com isso, várias empresas, nossas inclusive,
-  anteciparam dividendos e bonificações. Um raciocínio simplista levaria a crer que, a partir de
-  agora, as empresas vão dar ênfase maior a reinvestir seus lucros visando crescer, e
-  menor a distribuir dividendos. Veremos.
+  No meu texto-resumo sobre a parceria, menciono o horizonte de 10 anos como sendo uma definição mínima de “longo prazo”. Penso que seja um mínimo também para avaliarmos o desempenho da parceria. Acabamos de completar 9 anos, tendo tido um retorno acumulado equivalente a 2,23 vezes o retorno do Ibovespa no mesmo período. Considero um resultado mais do que satisfatório, ainda mais considerando que sigo mantendo outro emprego e ainda não consigo me dedicar profissionalmente aos investimentos. Mas meu prazo é ainda mais longo: enquanto eu tiver saúde, pretendo continuar investindo. Espero que ainda por algumas décadas.
 </p>
 
 <p>
-  O fato de nossas empresas terem subido significativamente de cotação enquanto distribuíram bons
-  dividendos nos faz querer olhar para cada uma delas e pensar se, hoje, nos tornaríamos sócios delas
-  novamente. Obviamente a resposta até agora foi “sim”. O que observamos é que, mesmo nos preços de hoje,
-  as empresas que temos parecem valer significativamente mais (ainda custam 3, 4, 5, 7 vezes seus resultados anuais). Elas mantém
-  um endividamento variando entre o moderado e o nulo. Das empresas que não fazem parte da nossa
-  carteira, vejo também uma meia-dúzia com qualidade e boa relação valor/preço, apenas não o
-  suficiente para diversificar ou substituir — e um ou outro caso em que, creia se puder, elas são
-  pequenas demais para nosso Clube, ao menos em volume de transações na bolsa de valores.
-</p>
-
-<p>
-  Num ano com resultado acima da média, pode nascer a ilusão de que nossos passos em falso foram
-  poucos. Só que os equívocos podem ser multianuais. Veja por exemplo uma verdadeira comédia de
-  erros chamada Cogna, protagonizada por mim: entre 2022 e 2024 tivemos uma boa fatia do nosso
-  patrimônio com ela, comprada a mais ou menos R$2 por ação. No finalzinho do ano passado eu joguei
-  a toalha e vendi a maior parte da nossa posição a R$1 por ação. Restou em nossa carteira uma
-  pequena parte do que tínhamos, que eu pretendia vender também. Prontamente ela começou a subir de
-  cotação mais que triplicou de preço, inclusive ajudando bastante nosso resultado este ano.
-  A lição é que era possível ter tido mais paciência tanto para comprar quanto para começar a vender.
-</p>
-
-<p>
-  A total falta de prognósticos oferecida na carta passada, por superstição e racionalidade, será mantida desta
-  vez. Manterei, é claro, o trabalho de busca por novas ideias de investimento. Mantenho também
-  todas as poupanças da minha família, exceto 3 meses de despesas de vida, investidas na nossa
-  parceria.
-</p>
-
-<p>
-  Gostaria de compartilhar com os novos cotistas e relembrar os mais antigos do “plano” que temos:
-  incrementar o nosso patrimônio, tanto pelos nosso retornos quanto por novos aportes, para nos
-  convertermos em um Fundo de fato. O Fundo tende a proporcionar que eu me profissionalize na
-  gestão, podendo dedicar tempo integral à gestão — é de se imaginar que trazendo resultados ainda
+  Gostaria de compartilhar com os novos parceiros e relembrar os mais antigos sobre nosso plano:
+  incrementar o nosso patrimônio, tanto pelos nossos retornos quanto por novos aportes, para nos
+  convertermos em um Fundo de fato. O Fundo tende a proporcionar que eu me profissionalize, podendo dedicar
+  tempo integral à gestão — é de se imaginar que isso trará resultados ainda
   melhores. Há também outras vantagens, como maior flexibilidade de manter nosso capital fora de
-  ações, ou fora de empresas brasileiras, se o período de turbulência. Acredito que quando esse
-  momento chegar, na soma todos sairemos ganhando. Hoje temos 2,5 milhões. Precisamos de algo a
-  partir de 20 milhões em valores atuais para viabilizar um Fundo. Ficarei muito grato a todas a
+  ações, ou fora de empresas brasileiras, se o período for de turbulência. Acredito que, quando esse
+  momento chegar, todos ganharemos. Hoje temos R$2,5 milhões. Precisamos de algo a
+  partir de 20 milhões em valores atuais para viabilizar um Fundo. Ficarei muito grato a todas e a
   todos que participarem disso, e darei o meu melhor para retribuir com bons resultados.
+</p>
+
+<p>
+  Abaixo adiciono links para relatórios deste ano.
 </p>
 
 <p>Desejo a você e aos seus um ótimo 2026!</p>
 <p>Gustavo Saiani</p>
+
+<p>
+  <a href="https://blog.gustavosaiani.com/wp-content/uploads/2026/01/Poema-Posic%CC%A7a%CC%83o-2025-12-31.pdf">Relatório de Posição - 31/12/2025 (PDF)</a>
+</p>
+
+<p>
+  <a href="https://blog.gustavosaiani.com/wp-content/uploads/2026/01/Poema-Compras-e-Vendas-2025.pdf">Relatório de Compras, Vendas e Bonificações</a>
+</p>
+
